# spparks

./: README  cubic_hcp_modified.files  spparks.svn.to.git.notes.rst
doc/: Manual.html  Manual.txt  PDFgen.sh  Section_commands.html  Section_commands.txt  Section_errors.html  Section_errors.txt  Section_example.html  Section_example.txt  Section_future.html  Section_future.txt  Section_history.html  Section_history.txt  Section_howto.html  Section_howto.txt  Section_intro.html  Section_intro.txt  Section_modify.html  Section_modify.txt  Section_perf.html  Section_perf.txt  Section_python.html  Section_python.txt  Section_start.html  Section_start.txt  Section_tools.html  Section_tools.txt  add_species.txt  (+245 more)
lib/stitch/: COPYRIGHT  Install.py  Makefile.spparks  README  ReadMeBuildApiDoc.rst  ReleaseNotes.rst  ReleaseNotes.txt  includelink  liblink  pyproject.toml  rsync_stitch_src.sh  setup.cee.cfg  setup.flamer.cfg  setup.py  setup.tutka.cfg  stitch-file-update.sql  stitch_README.rst
lib/stitch/docs/source/: conf.py  index.rst
lib/stitch/libstitch/: Makefile  Makefile.flamer  setup.py  stitch.c  stitch.h  stitch_README.rst  stitch_performance.c  stitchmodule.c  stitchmodule.c.save
lib/stitch/src/stitch/: __init__.py
lib/stitch/src/stitch/libstitch/: Makefile  convert10to11.sql  read_test.py  stitch.h  stitch_test.c  stitch_test_data.h  stitchmodule.c
lib/stitch/stitch-1.0/: Makefile  Makefile.flamer  Makefile.libstitch  Makefile.steve  stitch.c  stitch.h  stitch_test.c
lib/stitch/tests/: Makefile  unit_cv_readwrite.py
lib/stitch/verify/: unit_cv_readwrite.py
(+1138 files in other folders)
