# pyproject.toml
[build-system]
requires = ["setuptools", "build", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "stitch"
version = "0.0.1"
dependencies = [
    "numpy",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.exclude-package-data]
stitch=["src/stitch/libstitch/*.c"]
